--- a/views/personas.hbs
+++ b/views/personas.hbs
@@ -1,3 +1,21 @@
+<br><br>
+
+<div class="container">
+    <h4>Busqueda</h4>
+    <form action="/api/product/personaCurp" method="POST">
+
+        <select id="busqueda" name="busqueda">
+            <option value="nombreProducto">Por nombre</option>
+        </select>
+
+        <input type="text" name="curp" id="curp" placeholder="Introduce CURP...">
+        <button type="submit">Buscar</button>
+
+    </form>
+
+</div>
+
+<br>
 <div class="table-responsive-sm">
     <table class="table w-auto table-striped">
 
