--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -10,6 +10,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/css/styles.css">
 
 </head>
 
@@ -24,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/"> Home </a>
+                    <a class="nav-link" href="/"> Inicio </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/api/personas">Lista de CURP</a>
