--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/api/personas">Lista de CURP</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/api/registro">Registro</a>
+                </li>
 
         </div>
     </nav>
