--- a/views/personas.hbs
+++ b/views/personas.hbs
@@ -2,20 +2,17 @@
 
 <div class="container">
     <h4>Busqueda</h4>
-    <form action="/api/product/personaCurp" method="POST">
+    <form action="/api/persona/personaCurp" method="POST">
 
-        <select id="busqueda" name="busqueda">
-            <option value="nombreProducto">Por nombre</option>
-        </select>
-
-        <input type="text" name="curp" id="curp" placeholder="Introduce CURP...">
-        <button type="submit">Buscar</button>
+        <input class="form-control" type="text" name="buscaCurp" placeholder="Introduce CURP...">
+        <button class="btn btn-primary" type="submit">Buscar</button>
 
     </form>
 
 </div>
 
 <br>
+
 <div class="table-responsive-sm">
     <table class="table w-auto table-striped">
 
@@ -25,9 +22,10 @@
                 <th class="th-sm">Apellido Paterno</th>
                 <th class="th-sm">Apellido Materno</th>
                 <th class="th-sm">Nombre(s)</th>
-                <th class="th-sm">Fecha de Nacimiento</th>
+                <th class="th-sm">Fecha de Nacimiento (dd/mm/aaaa)</th>
                 <th class="th-sm">Sexo</th>
                 <th class="th-sm">Estado</th>
+                <th class="th-sm">CURP</th>
             </tr>
         </thead>
         <tbody>
@@ -39,6 +37,7 @@
                 <td>{{FechaNacimiento}}</td>
                 <td>{{Sexo}}</td>
                 <td>{{Estado}}</td>
+                <td>{{Curp}}</td>
             </tr>
             {{/personas}}
         </tbody>
