--- a/views/persona.hbs
+++ b/views/persona.hbs
@@ -1,20 +1,36 @@
-<form action="/api/persona/:personaCurp" method="DELETE">
-    <div class="form-group">
-        <label for="ApellidoPaterno">Apellido Paterno</label>
-        <input type="text" class="form-control" value="" name="ApellidoPaterno">
-    </div>
-    <div class="form-group">
-        <label for="ApellidoMaterno">Apellid Materno</label>
-        <input type="text" class="form-control" value="" name="ApellidoMaterno">
-    </div>
-    <div class="form-group">
-        <label for="Nombre">Nombre</label>
-        <input type="text" class="form-control" value="" name="Nombre">
-    </div>
-    <div class="form-group">
-        <label for="FechaNacimiento">Fecha de Nacimiento</label>
-        <input type="text" class="form-control" value="" name="FechaNacimiento">
-    </div>
-    <button type="submit" class="btn btn-primary">Borrar registro</button>
+<br>
+<div class="container">
+    <form action="/api/persona" method="DELETE">
 
-</form>
+        <div class="form-group">
+            <label for="ApellidoPaterno">Apellido Paterno</label>
+            <input type="text" class="form-control" disabled value="" name="ApellidoPaterno">
+        </div>
+        <div class="form-group">
+            <label for="ApellidoMaterno">Apellido Materno</label>
+            <input type="text" class="form-control" disabled value="" name="ApellidoMaterno">
+        </div>
+        <div class="form-group">
+            <label for="Nombre">Nombre</label>
+            <input type="text" class="form-control" disabled value="" name="Nombre">
+        </div>
+        <div class="form-group">
+            <label for="FechaNacimiento">Fecha de Nacimiento</label>
+            <input type="text" class="form-control" disabled value="" name="FechaNacimiento">
+        </div>
+        <div class="form-group">
+            <label for="Sexo">Sexo</label>
+            <input type="text" class="form-control" disabled value="" name="Sexo">
+        </div>
+        <div class="form-group">
+            <label for="Estado">Estado</label>
+            <input type="text" class="form-control" disabled value="" name="Estado">
+        </div>
+        <div class="form-group">
+            <label for="Curp">Curp</label>
+            <input type="Curp" class="form-control" disabled value="" name="Curp">
+        </div>
+        <button type="submit" class="btn btn-danger">Confirmar borrado</button>
+
+    </form>
+</div>
