--- a/views/personas.hbs
+++ b/views/personas.hbs
@@ -2,9 +2,9 @@
 
 <div class="container">
     <h4>Busqueda</h4>
-    <form action="/api/persona/personaCurp" method="POST">
+    <form action="/api/personas/personaCurp" method="POST">
 
-        <input class="form-control" type="text" name="buscaCurp" placeholder="Introduce CURP...">
+        <input class="form-control" type="text" name="curpbusca" placeholder="Introduce CURP...">
         <button class="btn btn-primary" type="submit">Buscar</button>
 
     </form>
@@ -14,7 +14,7 @@
 <br>
 
 <div class="table-responsive-sm">
-    <table class="table w-auto table-striped">
+    <table class="table text-center table-striped">
 
         <thead>
 
