--- a/views/persona.hbs
+++ b/views/persona.hbs
@@ -1,36 +1,84 @@
-<br>
+{{!-- <br>
 <div class="container">
-    <form action="/api/persona" method="DELETE">
+    <form action="/api/persona/{{persona._id}}?_method=delete" method="POST">
 
         <div class="form-group">
             <label for="ApellidoPaterno">Apellido Paterno</label>
-            <input type="text" class="form-control" disabled value="" name="ApellidoPaterno">
+            <input type="text" class="form-control" disabled value="{{persona.ApellidoPaterno}}" name="ApellidoPaterno">
         </div>
         <div class="form-group">
             <label for="ApellidoMaterno">Apellido Materno</label>
-            <input type="text" class="form-control" disabled value="" name="ApellidoMaterno">
+            <input type="text" class="form-control" disabled value="{{persona.ApellidoMaterno}}" name="ApellidoMaterno">
         </div>
         <div class="form-group">
             <label for="Nombre">Nombre</label>
-            <input type="text" class="form-control" disabled value="" name="Nombre">
+            <input type="text" class="form-control" disabled value="{{persona.Nombre}}" name="Nombre">
         </div>
         <div class="form-group">
             <label for="FechaNacimiento">Fecha de Nacimiento</label>
-            <input type="text" class="form-control" disabled value="" name="FechaNacimiento">
+            <input type="text" class="form-control" disabled value="{{persona.FechaNacimiento}}" name="FechaNacimiento">
         </div>
         <div class="form-group">
             <label for="Sexo">Sexo</label>
-            <input type="text" class="form-control" disabled value="" name="Sexo">
+            <input type="text" class="form-control" disabled value="{{persona.Sexo}}" name="Sexo">
         </div>
         <div class="form-group">
             <label for="Estado">Estado</label>
-            <input type="text" class="form-control" disabled value="" name="Estado">
+            <input type="text" class="form-control" disabled value="{{persona.Estado}}" name="Estado">
         </div>
         <div class="form-group">
             <label for="Curp">Curp</label>
-            <input type="Curp" class="form-control" disabled value="" name="Curp">
+            <input type="Curp" class="form-control" disabled value="{{persona.Curp}}" name="Curp">
         </div>
+
         <button type="submit" class="btn btn-danger">Confirmar borrado</button>
 
+    </form>
+</div> --}}
+
+<div class="pt-3 pl-3">
+    <form action="/api/persona/{{persona._id}}?_method=delete" method="POST">
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label for="ApellidoPaterno"><strong>Apellido Paterno</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.ApellidoPaterno}}"
+                        name="ApellidoPaterno">
+                </div>
+                <div class="form-group">
+                    <label for="ApellidoMaterno"><strong>Apellido Materno</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.ApellidoMaterno}}"
+                        name="ApellidoMaterno">
+                </div>
+                <div class="form-group">
+                    <label for="Nombre"><strong>Nombre</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.Nombre}}" name="Nombre">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="FechaNacimiento"><strong>Fecha de Nacimiento</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.FechaNacimiento}}"
+                        name="FechaNacimiento">
+                </div>
+                <div class="form-group">
+                    <label for="Sexo"><strong>Sexo</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.Sexo}}" name="Sexo">
+                </div>
+                <div class="form-group">
+                    <label for="Estado"><strong>Estado</strong></label>
+                    <input type="text" class="form-control" disabled value="{{persona.Estado}}" name="Estado">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="Curp"><strong>Curp</strong></label>
+                    <input type="Curp" class="form-control" disabled value="{{persona.Curp}}" name="Curp">
+                </div>
+
+                <button type="submit" class="btn btn-danger">Confirmar borrado</button>
+
+            </div>
+        </div>
     </form>
 </div>
