--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -75,7 +75,7 @@
             <option value="NE">Nacido en el extranjero</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-light">
+    <button type="submit" class="btn btn-primary">
         Calcula CURP
     </button>
-</form>
+</form> 
